--- a/views/add-date.pug
+++ b/views/add-date.pug
@@ -14,7 +14,7 @@ block content
 
                 .form-control 
                     label(for="date") Datum : 
-                    input#date(type="date" name="date")    
+                    input#date(type="date" name="day")    
 
                 .form-control
                     label(for="time") Van :
