--- a/views/calendar.pug
+++ b/views/calendar.pug
@@ -12,7 +12,7 @@ block content
         if dates.length > 0
             each date in dates
                 div.date
-                    h2 #{ date.date }
+                    h2 #{ date.day }
                     p #{ date.start } - #{ date.end }               
 
         else 
